--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "raduga.duga"
         minSdkVersion 17
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -25,19 +25,14 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
 
-    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
-    compile 'com.google.zxing:core:3.2.0'
-
-    // RecyclerView
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    // CardView
-    compile 'com.android.support:cardview-v7:23.3.0'
 
     compile 'io.realm:realm-android:0.82.1'
 
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+
+    compile 'com.journeyapps:zxing-android-embedded:3.3.0'
 
     def thirtyinchVersion = '0.7.1'
 
